--- a/src/styles/utils/display.scss
+++ b/src/styles/utils/display.scss
@@ -6,8 +6,28 @@
   display: none !important;
 }
 
+.d-block {
+  display: block !important;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
 .centered-items {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.text-center {
+  text-align: center;
 }
